# transcript-rag-agent

./: .env.example  .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: ci.yml
.lavish/: s00_senior-rag-roadmap.html  s01_frontend-review-redesign.html  s02_ts-react-chat-first-redesign.html  s03_transcript-lab-improvement-plan.html  s04_rag-portfolio-review-roadmap.html
agent-work/: s3_rag_agent.md  s4_rag_filter.md
ai_specs/: s5_rag_injestion.md  s7_agentic_rag.md
dashboard/: chat.html  chat_history.json  evaluation.html  evaluation.json  rag_pipeline.html
dashboard/chunk_space/: projection.json  question.json
docs/: golden-set-curation.md
evals/runs/: README.md  ablation-20260722-112102.json  eval-20260722-114451.json
evaluation/: evaluation.html  evaluation.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Logo.test.tsx  Logo.tsx  main.tsx  test-setup.ts  theme.css  theme.test.ts  theme.ts
opensrc/: setup_opensrc.sh  sources.json
scripts/: backfill_chunk_metadata.py  generate_golden_candidates.py  visualize_pipeline.py
src/: cli.py  config.py  observability.py
src/agents/: context.py  models.py  prompts.py  rag_agent.py  rag_transcript_agent.py  transcript_agent.py
src/api/: __init__.py  corpus.py  experiments.py  main.py  ranking.py  scoreboard.py
src/chat/: __init__.py  frontend.py  history.py  session.py  setups.py
src/dashboard/: __init__.py  chunk_space.py  rag_pipeline.py  theme.py
src/evals/: __init__.py  _ragas_compat.py  ablation.py  evaluation.py  golden.py  golden_dataset.json  ir_metrics.py  judge.py  regression.py  s2_context_eval.py  s3_rag_agent_eval.py  s4_rag_filter_eval.py
src/rag/: __init__.py  bm25.py  chunking.py  context.py  embeddings.py  eval.py  fusion.py  graph.py  indexing.py  ingestion.py  models.py  references.py  rerank.py  storage.py  summaries.py
src/transcripts/: discovery.py  fetcher.py  models.py
static/: langchain_pipeline.html
tests/: test_cli.py  test_config.py  test_observability.py
tests/agents/: test_conversational_memory.py  test_rag_agent.py  test_rag_transcript_agent.py  test_transcript_agent.py
tests/api/: conftest.py  test_app.py  test_corpus_insights.py  test_experiments.py  test_ranking.py
tests/chat/: conftest.py  test_frontend.py  test_history.py  test_session.py  test_setups.py
tests/dashboard/: test_chunk_space.py
tests/evals/: test_ablation.py  test_committed_runs.py  test_evaluation.py  test_golden.py  test_ir_metrics.py  test_judge.py  test_regression.py  test_s2_context_eval.py  test_s3_rag_agent_eval.py
tests/rag/: test_bm25.py  test_channel_scope.py  test_chunking.py  test_context.py  test_eval.py  test_fusion.py  test_graph.py  test_graph_cache.py  test_references.py  test_rerank.py  (+1 more)
(+56 files in other folders)
