[project]
name = "yt-agent"
version = "0.1.0"
authors = [
    { name = "nathan phillips", email = "nathanphillips369@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "mlflow>=3.12.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
